# cnn

./: .gitignore  pyproject.toml
cnn/mnist/: cnn_MNIST.py
cnn/usps/: cnn_USPS.py  cnn__local_model_USPS_SGD_mnist.pt  cnn_local_USPS.py  cnn_model_USPS_SGD_mnist.pt  local_cnn.py  mlp_USPS.py  mlp_model_USPS_SGD_mnist.pt  pa1_dataloader.py
