[tool.poetry]
name = "cnn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.8.0"
torchaudio = "^0.8.0"
torchvision = "^0.9.0"
matplotlib = "^3.3.4"

[tool.poetry.dev-dependencies]
spyder = "^4.2.3"
notebook = "^6.2.0"
Rtree = "^0.9.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
